<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
        <data>
            <variable
                name="model"
                type="com.arraigntech.triviaapp.ui.cricket.CricketFragmentModel" />
        </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/questionTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/who_is_the_best_cricketer_in_the_world_n_options"
                android:textColorHint="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <RadioGroup
                android:id="@+id/radioGP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onCheckedChanged="@{(view,m)->model.onSplitTypeChanged(view,m)}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/questionTV">

                <RadioButton
                    android:id="@+id/rOne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/sachin_tendulkar"
                    android:textColorHint="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/questionTV" />

                <RadioButton
                    android:id="@+id/rTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/virat_kohli"
                    android:textColorHint="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/checkOne" />

                <RadioButton
                    android:id="@+id/rThree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/adam_gilchrist"
                    android:textColorHint="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/checkTwo" />

                <RadioButton
                    android:id="@+id/rFour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/jacques_kallis"
                    android:textColorHint="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/checkThree" />
            </RadioGroup>

            <TextView
                android:id="@+id/selectTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/select_any_one"
                android:textColorHint="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/radioGP" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/nextBT"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/next"
            android:textColorHint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
