<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">

    <TextView
        android:id="@+id/nameTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Hello Name"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/sampleTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/here_are_the_selected_answers"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/nameTV"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/quesOneTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/who_is_the_best_cricketer_in_the_world"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/sampleTV"
        app:layout_constraintStart_toStartOf="parent"/>


    <TextView
        android:id="@+id/ansOneTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Ans: Kohli"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/quesOneTv"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/quesTwoTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/who_is_the_best_cricketer_in_the_world"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/ansOneTV"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/ansTwoTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Ans: orange,green,white"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/quesTwoTv"
        app:layout_constraintStart_toStartOf="parent"/>


    <Button
        android:id="@+id/finishtBT"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:hint="@string/finish"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/nextBT"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:textColorHint="@color/white"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/nextBT"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/history"
        app:layout_constraintStart_toEndOf="@id/finishtBT"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent" />





</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
